--- a/public/css/base-styles.css
+++ b/public/css/base-styles.css
@@ -1,6 +1,6 @@
 .page-content {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: no-wrap;
     flex: 1 1 auto;
 }
 
@@ -8,4 +8,6 @@
     display: flex;
     flex: 1 1 auto;
     flex-wrap: wrap;
+    align-items: stretch;
+    padding: 20px;
 }
