--- a/public/css/base-styles.css
+++ b/public/css/base-styles.css
@@ -12,7 +12,8 @@
 
 .lists-wrapper {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     padding: 20px;
     grid-column-gap: 20px;
+    grid-row-gap: 20px;
 }
